--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -27,6 +27,13 @@
                 android:icon="@drawable/ic_menu_gallery"
                 android:title="Multi-Variable Matmul Linear Regression" />
 
+            <item
+                android:id="@+id/nav_LogisticRegression"
+                android:icon="@drawable/ic_menu_gallery"
+                android:title="Logistic Regression" />
+
+
+
         </menu>
     </item>
 
