--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -32,6 +32,12 @@
                 android:icon="@drawable/ic_menu_gallery"
                 android:title="Logistic Regression" />
 
+            <item
+                android:id="@+id/nav_SoftmaxClassifier"
+                android:icon="@drawable/ic_menu_gallery"
+                android:title="Softmax Classifier" />
+
+
 
 
         </menu>
