--- a/app/src/main/res/layout/about_content.xml
+++ b/app/src/main/res/layout/about_content.xml
@@ -192,6 +192,16 @@
                     android:autoLink="web"
                     android:text="@string/about_library_tensorflowmobile_url" />
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="Android TensorFlow MNIST Machine Learning Example" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:autoLink="web"
+                    android:text="https://github.com/MindorksOpenSource/AndroidTensorFlowMNISTExample" />
 
 
             </LinearLayout>
