--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -37,9 +37,10 @@
                 android:icon="@drawable/ic_menu_gallery"
                 android:title="Softmax Classifier" />
 
-
-
-
+            <item
+                android:id="@+id/nav_LearningRateAndEvaluation"
+                android:icon="@drawable/ic_menu_gallery"
+                android:title="Learning Rate and Evaluation" />
         </menu>
     </item>
 
